--- a/package.json
+++ b/package.json
@@ -17,6 +17,15 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-validator": "^7.0.1"
+    "express-validator": "^7.0.1",
+    "jsonwebtoken": "^9.0.0",
+    "mailchimp-api-v3": "^1.15.0",
+    "morgan": "^1.10.0",
+    "nodemailer": "^6.9.2",
+    "nodemon": "^2.0.22",
+    "pg": "^8.10.0",
+    "pg-hstore": "^2.3.4",
+    "request": "^2.88.2",
+    "sequelize": "^6.31.1"
   }
 }
