--- a/.env
+++ b/.env
@@ -8,3 +8,5 @@ DB_HOST=localhost
 DB=ingenia_v2
 PORT=3002
 DB_PORT=5432
+
+DATABASE_URL=postgres://ingenia_db_user:0BeBBpUmnCakPdO5Qe1IMysudM4cmLzv@dpg-cnjivcmn7f5s73f9h6a0-a.oregon-postgres.render.com/ingenia_db
