--- a/.env
+++ b/.env
@@ -1,1 +1,12 @@
+# DB_USER=postgres
+# DB_PASSWORD=admin
+# DB_HOST=localhost:5432
+# DB_NAME=ingenia
+DB_USER=postgres
+DB_PASSWORD=admin
+DB_HOST=localhost
+DB=ingenia_v2
+PORT=3002
+DB_PORT=5432
 
+DATABASE_URL=postgres://ingenia_db_user:0BeBBpUmnCakPdO5Qe1IMysudM4cmLzv@dpg-cnjivcmn7f5s73f9h6a0-a.oregon-postgres.render.com/ingenia_db
