--- a/.env
+++ b/.env
@@ -10,4 +10,5 @@ DB=ingenia_test
 PORT=3002
 DB_PORT=5432
 
-DATABASE_URL=postgres://ingenia_db_user:0BeBBpUmnCakPdO5Qe1IMysudM4cmLzv@dpg-cnjivcmn7f5s73f9h6a0-a.oregon-postgres.render.com/ingenia_db
+DATABASE_URL_EXTERNAL=postgres://ingenia_db_user:0BeBBpUmnCakPdO5Qe1IMysudM4cmLzv@dpg-cnjivcmn7f5s73f9h6a0-a.oregon-postgres.render.com/ingenia_db
+DATABASE_URL_INTERNAL=postgres://ingenia_db_user:0BeBBpUmnCakPdO5Qe1IMysudM4cmLzv@dpg-cnjivcmn7f5s73f9h6a0-a/ingenia_db
