--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,12 @@
 {
-    "builds": [
-        {
-            "src": "./src/index.js",
-            "use": "@vercel/node"
-        }
-    ],
+    "builds": [{
+        "src": "./index.js",
+        "use": "@vercel/node"
+    }],
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "api/index.js"
+            "dest": "/"
         }
     ]
 }
